--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,10 @@ body {
 .feed {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  max-width: calc(160px * 8 + 24px * 7 + 192px);
   gap: 24px;
   padding: 96px;
+  margin: 0 auto;
 }
 
 .item {
